--- a/client/public/index.html
+++ b/client/public/index.html
@@ -13,7 +13,7 @@
       homescreen on Android. See https://developers.google.com/web/fundamentals/web-app-manifest/
     -->
     <link
-      href="https://fonts.googleapis.com/css?family=Berkshire+Swash|Caveat|Cinzel+Decorative|Contrail+One|East+Sea+Dokdo|Elsie|Oregano|Rock+Salt|Spirax"
+      href="https://fonts.googleapis.com/css?family=Berkshire+Swash|Caveat|Cinzel+Decorative|Contrail+One|East+Sea+Dokdo|Elsie|Oregano|Rock+Salt|Spirax|Roboto"
       rel="stylesheet"
     />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
