added meta oj tags for sharing link on social media

--- a/client/public/index.html
+++ b/client/public/index.html
@@ -8,6 +8,16 @@
       content="width=device-width, initial-scale=1, shrink-to-fit=no"
     />
     <meta name="theme-color" content="#000000" />
+    <meta property="og:title" content="D&D 5e Spellbook Builder" />
+    <meta property="og:image" content="%PUBLIC_URL%/dndSpellThumbnail.png" />
+    <meta
+      property="og:description"
+      content="This is an online tool for quickly looking up 5e d&d spells, as well as saving them to character spellbooks for easy access."
+    />
+    <meta
+      property="og:url"
+      content="https://dnd-5e-spellbook-builder.herokuapp.com"
+    />
     <!--
       manifest.json provides metadata used when your web app is added to the
       homescreen on Android. See https://developers.google.com/web/fundamentals/web-app-manifest/
